fix ui problem when there is too much sizes or colors to a catalogImage

--- a/begoodPlus/static_cdn/assets/base/css/style.scss
+++ b/begoodPlus/static_cdn/assets/base/css/style.scss
@@ -655,6 +655,10 @@ body.waiting * {
         .product-color {
           display: flex;
           //flex-wrap: wrap;
+          width: 100%;
+          justify-content: flex-start;
+          flex-grow: 1;
+          flex-shrink: 0;
 
           /*
           flex-wrap: wrap;
@@ -663,7 +667,9 @@ body.waiting * {
           flex-direction: row;*/
           .color-box {
             margin: 3px;
-            width: 25px;
+            //width: 25px;
+            max-width: 25px;
+            flex: 1;
             height: 25px;
             border: 1px black solid;
             border-radius: 50%;
@@ -681,9 +687,14 @@ body.waiting * {
           flex-direction: row-reverse;
           flex-wrap: wrap;*/
             display: flex;
+            width: 100%;
+            justify-content: flex-start;
+            flex-grow: 1;
+            flex-shrink: 0;
             //flex-wrap: wrap;
 
             .size-box {
+              flex: 1;
               border: 1px black solid;
               margin: 3px;
               min-width: 30px;
